# bettersys

./: .dockerignore  .gitignore  AGENTS.md  API_AUTH_VERIFICATION.md  AWS_CONNECTION.md  CLEANUP_COMPLETE.md  CRITICAL_FIXES_REPORT.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_TRADEBETTER_XYZ.md  LOCAL_TESTING_GUIDE.md  QUICKSTART.md  README.md  RESILIENCE_FIXES.md  SIGNALS_4_6_ACTIVE.md  STATUS.md  TERMINAL_DEPLOYMENT_INSTRUCTIONS.md  copy trading guide.md  domeapidocs.json  enclavedocs.json  more_insiders.csv  rustllmcalls.md  start.sh
docs/: 15m_updown_hft_backtest_analysis.tex  15m_updown_trading_specification.tex  15m_updown_trading_strategy.tex  BETTER_whitepaper.tex  BETTER_whitepaper_formal.tex  BETTER_whitepaper_v2.tex  BINANCE_LATENCY_HARNESS.md  BINANCE_LATENCY_SWEEP_PLAN.md  DATASET_READINESS_REPORT.tex  EDGE_RECEIVER_ARCHITECTURE.md  FAST15M_LATENCY_ARBITRAGE_ASSESSMENT.md  FAST15M_SYSTEM_SYNOPSIS.md  ROUTE_QUALITY_MONITOR_SPEC.md  TIME_SYNC_DESIGN.md  backtest_v2_architectural_exposition.tex  backtest_v2_architecture.tex  backtest_v2_backend_architecture.tex  betterbot_vault_engine_spec.tex  bettersys_data_ingestion_storage.tex  bettersys_frontend_backend_relationship.tex  bettersys_live_trading_implementation.tex  bettersys_rust_backend_overview.tex  bettersys_tick_to_trade_latency.tex  binance_integration_report.tex  binance_integration_report_v2.tex  fast15m_technical_report.tex  latency_arbitrage_strategy.tex  main.tex  trading_logic_mathematical_specification.tex
frontend/: .eslintrc.cjs  Dockerfile  SETUP_README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
infra/latency-sweep/probe/: Cargo.toml
infra/latency-sweep/probe/src/: main.rs
rust-backend/: .env.example  .gitignore  Cargo.toml  DEBUGGING_FIXES_REPORT.md  Dockerfile  FIXES_APPLIED.md  HFT_BOOK_STORE_IMPLEMENTATION.md  WALLET_TRACKING_REPORT.md  clippy.toml  generate_wallets.py  package-lock.json  perf_config.toml  simulated_trades_100.json  start_recording.sh  test_polymarket.sh  wallets_generated.rs
rust-backend/config/: route_quality.toml
rust-backend/docs/: API_CHANGELOG.md  INSTITUTIONAL_API_ENHANCEMENTS.md  LIVE_RECORDING_EVIDENCE.md  backtest_v2_architecture_descriptive.tex  backtest_v2_audit.tex
rust-backend/examples/: backtest_theme_demo.rs
rust-backend/scripts/: dome_replay_sanity.py  generate_receipt.py
rust-backend/src/: .env.example  backtest.rs  lib.rs  main.rs  models.rs  risk.rs
rust-backend/src/api/: backtest_v2.rs  mod.rs  routes.rs  signals_api.rs  simple.rs  simple_routes.rs
rust-backend/src/arbitrage/: engine.rs  fees.rs  mod.rs
rust-backend/src/auth/: api.rs  jwt.rs  middleware.rs  mod.rs  models.rs  user_store.rs
rust-backend/src/backtest_v2/: ACCOUNTING_AUDIT.md  ACCOUNTING_MUTATION_INVENTORY.md  ACCOUNTING_SOLE_PATHWAY_AUDIT.md  AUDIT_REPORT.md  AUDIT_REPORT_DATA_INGESTION.md  AUDIT_VERDICT.md  CHAINLINK_INTEGRATION_NOTES.md  DATA_PIPELINE_AUDIT.md  GATE_SUITE_AUDIT.md  HERMETIC_COMPILE_ENFORCEMENT.md  HERMETIC_STRATEGY_MODE.md  INCREMENTAL_DATA_DISCOVERY.md  INTEGRITY_POLICY.md  INVARIANT_ENFORCEMENT.md  LIVE_DATA_SURFACE.md  OMS_PARITY_AUDIT.md  ORCHESTRATOR.md  PRODUCTION_GRADE_CONTRACT.md  QUEUE_MODEL_AUDIT.md  READINESS_VERDICT.md  RUN_FINGERPRINT_SPEC.md  SENSITIVITY_ANALYSIS.md  SETTLEMENT_AUDIT.md  SETTLEMENT_CHAINLINK_OPERATIONALIZED.md  STRICT_ACCOUNTING.md  VISIBILITY_AUDIT.md  accounting_enforcer.rs  accounting_tests.rs  artifact_store.rs  basis_signal.rs  benchmark.rs  book.rs  book_recorder.rs  clock.rs  data_contract.rs  data_pipeline.rs  delta_recorder.rs  disclaimers.rs  disclaimers_tests.rs  dome_replay_feed.rs  (+89 more)
rust-backend/src/backtest_v2/oracle/: backfill.rs  basis_diagnostics.rs  chainlink.rs  config.rs  mod.rs  settlement_source.rs  storage.rs  tests.rs  validation.rs
rust-backend/src/edge/: client.rs  mod.rs  receiver.rs  wire.rs
rust-backend/src/latency/: mod.rs
rust-backend/src/middleware/: logging.rs  mod.rs  rate_limit.rs
rust-backend/src/performance/: allocator.rs  benchmark.rs  config.rs  cpu.rs  io.rs  load_generator.rs  memory.rs  metrics.rs  mod.rs  network.rs  queues.rs  report.rs  throughput.rs  tracing_layer.rs  venue.rs
rust-backend/src/performance/latency/: binance_harness.rs  comprehensive.rs  histogram.rs  mod.rs  regression.rs  socket_tuning.rs  spans.rs  time_sync.rs
rust-backend/src/performance/tui/: app.rs  hardware.rs  hft_metrics.rs  mod.rs  renderer.rs  widgets.rs
rust-backend/src/route_quality/: baseline.rs  config.rs  integration.rs  metrics.rs  mitigation.rs  mod.rs  prober.rs
rust-backend/src/scrapers/: BINANCE_HFT_INGEST.md  binance_arb_feed.rs  binance_book_ticker.rs  binance_book_ticker_metrics.rs  binance_hardened_ingest.rs  binance_hft_bench.rs  binance_hft_ingest.rs  binance_price_feed.rs  binance_session.rs  chainlink_feed.rs  dome.rs  dome_realtime.rs  dome_replay_ingest.rs  dome_rest.rs  dome_tracker.rs  dome_websocket.rs  expiry_edge.rs  hashdive.rs  hashdive_api.rs  mod.rs  oracle_comparison.rs  polymarket.rs  polymarket_api.rs  polymarket_book_store.rs  polymarket_book_store_test.rs  polymarket_gamma.rs  polymarket_ws.rs
rust-backend/src/signals/: correlator.rs  db_storage.rs  detector.rs  enrichment.rs  mod.rs  quality.rs  storage.rs  updown_history.rs  wallet_analytics.rs
rust-backend/src/signals/prediction_market_pricing/: detailed_implementation_guide.md  implementation_plan_15m.md  overview.md  rnjd_implementation.tex
rust-backend/src/vault/: ab_test.rs  backtest_rnjd.rs  belief_vol.rs  book_access.rs  engine.rs  execution.rs  fast15m_reactive.rs  hft_paper_strategy.rs  kelly.rs  latency_arb.rs  llm.rs  mod.rs  orderflow_paper.rs  paper_ledger.rs  pool.rs  rnjd.rs  trade_executor.rs  unified_15m_strategy.rs  updown15m.rs  user_accounts.rs  vault_db.rs
rust-backend/tests/: backtest_run_integration.rs
scripts/: generate_auditable_trades.py  generate_calibrated_trades.py  generate_demo_trades.py  generate_final_trades.py  generate_investor_trades.py  generate_real_trade_log.py  run_tests.sh  (+1 more)
(+125 files in other folders)
