[package]
name = "betterbot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket (with rustls TLS support for SSL certificates - more portable)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP client (using rustls instead of openssl to avoid build issues)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Fast synchronization primitives
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing
rayon = "1.8"

# Math and optimization
nalgebra = "0.32"
statrs = "0.16"
rand = "0.8"

# Environment
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Authentication & Security (Phase 7)
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
httpmock = "0.6"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "betterbot"
path = "src/main.rs"
